--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-10-08 20:01-0400\n"
+"POT-Creation-Date: 2020-10-08 20:31-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -28,7 +28,7 @@ msgstr "Criado em"
 
 #: core/models.py:23
 msgid "Modified at"
-msgstr ""
+msgstr "Modificado em"
 
 #: core/models.py:29
 msgid "Active"
@@ -38,8 +38,123 @@ msgstr "Ativo"
 msgid "Description"
 msgstr "Descrição"
 
-#: core/models.py:47 core/models.py:48
+#: core/models.py:43
+msgid "Means payment already exists"
+msgstr "Meio de pagamento duplicado"
+
+#: core/models.py:48 core/models.py:186
 msgid "Means payment"
+msgstr "Meio de pagamento"
+
+#: core/models.py:49
+#| msgid "Means payment"
+msgid "Means payments"
+msgstr "Meios de pagamento"
+
+#: core/models.py:54
+msgid "Occuped"
+msgstr "Ocupado"
+
+#: core/models.py:55
+msgid "Desoccuped"
+msgstr "Desocupado"
+
+#: core/models.py:60
+msgid "Number"
+msgstr "Número"
+
+#: core/models.py:66 core/models.py:130
+msgid "Status"
+msgstr "Situação"
+
+#: core/models.py:71 core/models.py:116
+msgid "Table"
+msgstr "Mesa"
+
+#: core/models.py:72
+msgid "Tables"
+msgstr "Mesas"
+
+#: core/models.py:79
+msgid "Name"
+msgstr "Nome"
+
+#: core/models.py:84
+msgid "Detail description"
+msgstr "Descrição detalhada"
+
+#: core/models.py:90
+msgid "Sale price"
+msgstr "Preço de venda"
+
+#: core/models.py:95 core/models.py:152
+msgid "Product"
+msgstr "Produto"
+
+#: core/models.py:96
+msgid "Products"
+msgstr "Produtos"
+
+#: core/models.py:101
+msgid "Opened"
+msgstr "Aberto"
+
+#: core/models.py:102
+msgid "Closed"
+msgstr "Fechado"
+
+#: core/models.py:103
+msgid "Canceled"
+msgstr "Cancelado"
+
+#: core/models.py:104
+msgid "Partial closed"
+msgstr "Fechado parcialmente"
+
+#: core/models.py:109
+msgid "Date"
+msgstr "Data"
+
+#: core/models.py:123
+msgid "User"
+msgstr "Usuário"
+
+#: core/models.py:135 core/models.py:145 core/models.py:179
+#: env/lib/python3.8/site-packages/django/forms/formsets.py:379
+#: env/lib/python3.8/site-packages/django/forms/formsets.py:386
+msgid "Order"
+msgstr "Pedido"
+
+#: core/models.py:136
+msgid "Orders"
+msgstr "Pedidos"
+
+#: core/models.py:158
+msgid "Quantity"
+msgstr "Quantidade"
+
+#: core/models.py:164
+msgid "Unit price"
+msgstr "Preço unitário"
+
+#: core/models.py:169
+msgid "Order item"
+msgstr "Item do pedido"
+
+#: core/models.py:170
+msgid "Order items"
+msgstr "Itens do pedido"
+
+#: core/models.py:192
+msgid "Value"
+msgstr "Valor"
+
+#: core/models.py:197
+msgid "Means payment order"
+msgstr "Meio de pagamento do pedido"
+
+#: core/models.py:198
+msgid "Means payment orders"
 msgstr "Meio de pagamento"
 
 #: env/lib/python3.8/site-packages/django/contrib/messages/apps.py:7
@@ -586,11 +701,6 @@ msgid "Please submit %d or more forms."
 msgid_plural "Please submit %d or more forms."
 msgstr[0] ""
 msgstr[1] ""
-
-#: env/lib/python3.8/site-packages/django/forms/formsets.py:379
-#: env/lib/python3.8/site-packages/django/forms/formsets.py:386
-msgid "Order"
-msgstr ""
 
 #: env/lib/python3.8/site-packages/django/forms/formsets.py:391
 msgid "Delete"
